--- a/packages/demo-html/public/behavioral-html/exit-html.html
+++ b/packages/demo-html/public/behavioral-html/exit-html.html
@@ -24,10 +24,10 @@
     <button
       id="popup"
       class="typeform-share"
-      data-tf-popup="HLjqXS5W"
-      data-tf-medium="unit-test"
-      data-tf-open="exit"
-      data-tf-open-value="50"
+      data-bai-popup="HLjqXS5W"
+      data-bai-medium="unit-test"
+      data-bai-open="exit"
+      data-bai-open-value="50"
     >
       Open the popup manually instead
     </button>
