--- a/packages/demo-html/public/behavioral-html/scroll-html.html
+++ b/packages/demo-html/public/behavioral-html/scroll-html.html
@@ -42,10 +42,10 @@
     <button
       id="popover"
       class="typeform-share"
-      data-tf-popover="HLjqXS5W"
-      data-tf-medium="unit-test"
-      data-tf-open="scroll"
-      data-tf-open-value="30"
+      data-bai-popover="HLjqXS5W"
+      data-bai-medium="unit-test"
+      data-bai-open="scroll"
+      data-bai-open-value="30"
     >
       Open the popover manually instead
     </button>
