--- a/packages/demo-html/public/callbacks.html
+++ b/packages/demo-html/public/callbacks.html
@@ -15,23 +15,23 @@
   <body>
     <div
       id="wrapper"
-      data-tf-widget="HLjqXS5W"
-      data-tf-source="localhost"
-      data-tf-on-ready="onTypeformReady"
-      data-tf-on-submit="onTypeformSubmit"
-      data-tf-on-question-changed="onTypeformQuestionChanged"
-      data-tf-on-height-changed="onTypeformHeightChanged"
-      data-tf-on-close="onTypeformClose"
-      data-tf-on-ending-button-click="onTypeformEndingButtonClick"
+      data-bai-widget="HLjqXS5W"
+      data-bai-source="localhost"
+      data-bai-on-ready="onTypeformReady"
+      data-bai-on-submit="onTypeformSubmit"
+      data-bai-on-question-changed="onTypeformQuestionChanged"
+      data-bai-on-height-changed="onTypeformHeightChanged"
+      data-bai-on-close="onTypeformClose"
+      data-bai-on-ending-button-click="onTypeformEndingButtonClick"
     ></div>
     <button
-      data-tf-popup="HLjqXS5W"
-      data-tf-source="localhost"
-      data-tf-on-ready="onTypeformReady"
-      data-tf-on-submit="onTypeformSubmit"
-      data-tf-on-question-changed="onTypeformQuestionChanged"
-      data-tf-on-close="onTypeformClose"
-      data-tf-on-ending-button-click="onTypeformEndingButtonClick"
+      data-bai-popup="HLjqXS5W"
+      data-bai-source="localhost"
+      data-bai-on-ready="onTypeformReady"
+      data-bai-on-submit="onTypeformSubmit"
+      data-bai-on-question-changed="onTypeformQuestionChanged"
+      data-bai-on-close="onTypeformClose"
+      data-bai-on-ending-button-click="onTypeformEndingButtonClick"
     >
       open popup
     </button>
