--- a/packages/demo-html/public/chat.html
+++ b/packages/demo-html/public/chat.html
@@ -28,12 +28,12 @@
     <div style="background: #ccc">
       <div
         id="wrapper"
-        data-tf-widget="HLjqXS5W"
-        data-tf-medium="demo-test"
-        data-tf-transitive-search-params="foo,bar"
-        data-tf-hidden="foo=foo value,bar=bar value"
-        data-tf-opacity="50"
-        data-tf-chat
+        data-bai-widget="HLjqXS5W"
+        data-bai-medium="demo-test"
+        data-bai-transitive-search-params="foo,bar"
+        data-bai-hidden="foo=foo value,bar=bar value"
+        data-bai-opacity="50"
+        data-bai-chat
       ></div>
     </div>
 
@@ -43,19 +43,19 @@
     </p>
 
     <p>
-      <button data-tf-slider="HLjqXS5W" data-tf-medium="demo-test" data-tf-chat>open slider</button>
+      <button data-bai-slider="HLjqXS5W" data-bai-medium="demo-test" data-bai-chat>open slider</button>
     </p>
 
     <div
-      data-tf-popover="HLjqXS5W"
-      data-tf-medium="demo-test"
-      data-tf-chat
-      data-tf-notification-days="3"
-      data-tf-tooltip="Reallylonglongwidetooltipwordfortestingthebreakwordbehaviour"
-      data-tf-custom-icon="https://images.typeform.com/images/3n7GXN7HiTZT/image/default"
+      data-bai-popover="HLjqXS5W"
+      data-bai-medium="demo-test"
+      data-bai-chat
+      data-bai-notification-days="3"
+      data-bai-tooltip="Reallylonglongwidetooltipwordfortestingthebreakwordbehaviour"
+      data-bai-custom-icon="https://images.typeform.com/images/3n7GXN7HiTZT/image/default"
     ></div>
 
-    <div data-tf-sidetab="HLjqXS5W" data-tf-medium="demo-test" data-tf-chat data-tf-button-text="open sidetab"></div>
+    <div data-bai-sidetab="HLjqXS5W" data-bai-medium="demo-test" data-bai-chat data-bai-button-text="open sidetab"></div>
 
     <script src="./lib/embed.js"></script>
 
