--- a/packages/demo-html/public/keep-session-html.html
+++ b/packages/demo-html/public/keep-session-html.html
@@ -6,10 +6,10 @@
     <title>Static HTML Demo</title>
   </head>
   <body>
-    <button id="popup" data-tf-popup="HLjqXS5W" data-tf-keep-session>toggle popup</button>
-    <button id="slider" data-tf-slider="HLjqXS5W" data-tf-keep-session>toggle slider</button>
-    <div data-tf-popover="HLjqXS5W" data-tf-keep-session></div>
-    <div data-tf-sidetab="HLjqXS5W" data-tf-keep-session data-tf-button-text="toggle side tab"></div>
+    <button id="popup" data-bai-popup="HLjqXS5W" data-bai-keep-session>toggle popup</button>
+    <button id="slider" data-bai-slider="HLjqXS5W" data-bai-keep-session>toggle slider</button>
+    <div data-bai-popover="HLjqXS5W" data-bai-keep-session></div>
+    <div data-bai-sidetab="HLjqXS5W" data-bai-keep-session data-bai-button-text="toggle side tab"></div>
     <script src="./lib/embed.js"></script>
   </body>
 </html>
