--- a/packages/demo-html/public/widget-full-screen-html.html
+++ b/packages/demo-html/public/widget-full-screen-html.html
@@ -22,9 +22,9 @@
   <body>
     <div class="element">I have z-index 10k</div>
     <div
-      data-tf-widget="HLjqXS5W"
-      data-tf-iframe-props="title=Foo Bar"
-      data-tf-full-screen
+      data-bai-widget="HLjqXS5W"
+      data-bai-iframe-props="title=Foo Bar"
+      data-bai-full-screen
     ></div>
     <script src="./lib/embed.js"></script>
   </body>
