--- a/packages/demo-html/public/widget-inline.html
+++ b/packages/demo-html/public/widget-inline.html
@@ -16,13 +16,13 @@
   <body>
     <div
       id="wrapper"
-      data-tf-widget="HLjqXS5W"
-      data-tf-medium="demo-test"
-      data-tf-transitive-search-params="foo,bar"
-      data-tf-hidden="foo=foo value,bar=bar value"
-      data-tf-opacity="50"
-      data-tf-share-ga-instance
-      data-tf-inline-on-mobile
+      data-bai-widget="HLjqXS5W"
+      data-bai-medium="demo-test"
+      data-bai-transitive-search-params="foo,bar"
+      data-bai-hidden="foo=foo value,bar=bar value"
+      data-bai-opacity="50"
+      data-bai-share-ga-instance
+      data-bai-inline-on-mobile
     ></div>
     <script src="./lib/embed.js"></script>
   </body>
