--- a/packages/demo-html/public/widget-lazy-html.html
+++ b/packages/demo-html/public/widget-lazy-html.html
@@ -101,10 +101,10 @@
     <h2>The widget is here</h2>
     <div
       id="wrapper"
-      data-tf-widget="HLjqXS5W"
-      data-tf-medium="demo-test"
-      data-tf-on-ready="formIsReady"
-      data-tf-lazy
+      data-bai-widget="HLjqXS5W"
+      data-bai-medium="demo-test"
+      data-bai-on-ready="formIsReady"
+      data-bai-lazy
     ></div>
     <script src="./lib/embed.js"></script>
     <script>
