--- a/packages/demo-html/public/behavioral-html/load-html.html
+++ b/packages/demo-html/public/behavioral-html/load-html.html
@@ -12,9 +12,9 @@
     <a
       href="#"
       class="typeform-share button"
-      data-tf-slider="HLjqXS5W"
-      data-tf-medium="unit-test"
-      data-tf-open="load"
+      data-bai-slider="HLjqXS5W"
+      data-bai-medium="unit-test"
+      data-bai-open="load"
       style="
         width: 54px;
         height: 54px;
