--- a/packages/demo-html/public/behavioral-html/time-html.html
+++ b/packages/demo-html/public/behavioral-html/time-html.html
@@ -10,10 +10,10 @@
     <a
       id="sidetab"
       class="typeform-share"
-      data-tf-sidetab="HLjqXS5W"
-      data-tf-medium="unit-test"
-      data-tf-open="time"
-      data-tf-open-value="5000"
+      data-bai-sidetab="HLjqXS5W"
+      data-bai-medium="unit-test"
+      data-bai-open="time"
+      data-bai-open-value="5000"
     >
       Open the sidetab manually instead
     </a>
