--- a/packages/demo-html/public/popover-html.html
+++ b/packages/demo-html/public/popover-html.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <div
-      data-tf-popover="HLjqXS5W"
-      data-tf-medium="demo-test"
-      data-tf-hidden="foo=foo value,bar=bar value"
-      data-tf-tooltip="Live long and prosper 🖖 But what if the message here is too long and it wraps? Well, who are we to judge. Embed lib is lib-eral and lets you do whatever you want. Its the share page that imposes silly rules such as maximum tooltip message length."
+      data-bai-popover="HLjqXS5W"
+      data-bai-medium="demo-test"
+      data-bai-hidden="foo=foo value,bar=bar value"
+      data-bai-tooltip="Live long and prosper 🖖 But what if the message here is too long and it wraps? Well, who are we to judge. Embed lib is lib-eral and lets you do whatever you want. Its the share page that imposes silly rules such as maximum tooltip message length."
       id="button"
-      data-tf-notification-days="3"
-      data-tf-enable-sandbox
+      data-bai-notification-days="3"
+      data-bai-enable-sandbox
     ></div>
     <script src="./lib/embed.js"></script>
   </body>
