--- a/packages/demo-html/public/popup-html.html
+++ b/packages/demo-html/public/popup-html.html
@@ -23,15 +23,15 @@
     <div class="element">I have z-index 10k</div>
     <button
       id="button"
-      data-tf-popup="HLjqXS5W"
-      data-tf-medium="demo-test"
-      data-tf-hidden="foo=foo value,bar=bar value"
+      data-bai-popup="HLjqXS5W"
+      data-bai-medium="demo-test"
+      data-bai-hidden="foo=foo value,bar=bar value"
     >
       toggle default (large)
     </button>
-    <button data-tf-popup="HLjqXS5W" data-tf-medium="demo-test" data-tf-size="80">toggle medium</button>
-    <button data-tf-popup="HLjqXS5W" data-tf-medium="demo-test" data-tf-size="45">toggle small</button>
-    <button data-tf-popup="HLjqXS5W" data-tf-medium="demo-test" data-tf-width="380" data-tf-height="300">
+    <button data-bai-popup="HLjqXS5W" data-bai-medium="demo-test" data-bai-size="80">toggle medium</button>
+    <button data-bai-popup="HLjqXS5W" data-bai-medium="demo-test" data-bai-size="45">toggle small</button>
+    <button data-bai-popup="HLjqXS5W" data-bai-medium="demo-test" data-bai-width="380" data-bai-height="300">
       toggle custom 380 x 300 pixels
     </button>
     <script src="./lib/embed.js"></script>
