--- a/packages/demo-html/public/sidetab-html.html
+++ b/packages/demo-html/public/sidetab-html.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <div
-      data-tf-sidetab="HLjqXS5W"
-      data-tf-medium="demo-test"
-      data-tf-button-text="open sidetab"
-      data-tf-hidden="foo=foo value,bar=bar value"
+      data-bai-sidetab="HLjqXS5W"
+      data-bai-medium="demo-test"
+      data-bai-button-text="open sidetab"
+      data-bai-hidden="foo=foo value,bar=bar value"
     ></div>
     <script src="./lib/embed.js"></script>
   </body>
