--- a/packages/demo-html/public/transitive-params-html.html
+++ b/packages/demo-html/public/transitive-params-html.html
@@ -28,21 +28,21 @@
   </head>
   <body>
     <div class="element">I have z-index 10k</div>
-    <div id="wrapper" data-tf-widget="HLjqXS5W" data-tf-medium="demo-test" data-tf-transitive-search-params></div>
+    <div id="wrapper" data-bai-widget="HLjqXS5W" data-bai-medium="demo-test" data-bai-transitive-search-params></div>
     <div
       id="wrapper2"
-      data-tf-widget="HLjqXS5W"
-      data-tf-medium="demo-test"
-      data-tf-transitive-search-params="foo,bar"
+      data-bai-widget="HLjqXS5W"
+      data-bai-medium="demo-test"
+      data-bai-transitive-search-params="foo,bar"
     ></div>
 
     <!-- Hidden field values take priority over transitive params values -->
     <div
       id="wrapper3"
-      data-tf-widget="HLjqXS5W"
-      data-tf-medium="demo-test"
-      data-tf-transitive-search-params="foo,bar"
-      data-tf-hidden="foo=hiddenvalue"
+      data-bai-widget="HLjqXS5W"
+      data-bai-medium="demo-test"
+      data-bai-transitive-search-params="foo,bar"
+      data-bai-hidden="foo=hiddenvalue"
     ></div>
     <script src="./lib/embed.js"></script>
     <script>
