--- a/packages/demo-html/public/widget-autoresize.html
+++ b/packages/demo-html/public/widget-autoresize.html
@@ -26,16 +26,16 @@
     </style>
   </head>
   <body>
-    <h1>Widget with <code>autoResize</code> / <code>data-tf-auto-resize</code></h1>
+    <h1>Widget with <code>autoResize</code> / <code>data-bai-auto-resize</code></h1>
     <p>Typeform below will be automatically resized to fit question and avoid displaying scrollbars.</p>
     <p>It has limits of <strong>minimum height 500px</strong> and <strong>maximum height 800px</strong>.</p>
     <div id="parent">
       <div
         id="wrapper"
-        data-tf-widget="sbEeLvXG"
-        data-tf-medium="demo-test"
-        data-tf-auto-resize="500, 800"
-        data-tf-on-height-changed="onTypeformHeightChanged"
+        data-bai-widget="sbEeLvXG"
+        data-bai-medium="demo-test"
+        data-bai-auto-resize="500, 800"
+        data-bai-on-height-changed="onTypeformHeightChanged"
       ></div>
       <div id="height">&nbsp;<br />&nbsp;</div>
     </div>
