--- a/packages/demo-html/public/widget-html.html
+++ b/packages/demo-html/public/widget-html.html
@@ -29,12 +29,12 @@
     <div class="element">I have z-index 10k</div>
     <div
       id="wrapper"
-      data-tf-widget="HLjqXS5W"
-      data-tf-medium="demo-test"
-      data-tf-transitive-search-params="foo,bar"
-      data-tf-hidden="foo=foo value"
-      data-tf-tracking="utm_source=facebook"
-      data-tf-iframe-props="title=Foo Bar"
+      data-bai-widget="HLjqXS5W"
+      data-bai-medium="demo-test"
+      data-bai-transitive-search-params="foo,bar"
+      data-bai-hidden="foo=foo value"
+      data-bai-tracking="utm_source=facebook"
+      data-bai-iframe-props="title=Foo Bar"
     ></div>
     <script src="./lib/embed.js"></script>
   </body>
