--- a/packages/demo-html/public/widget-theme.html
+++ b/packages/demo-html/public/widget-theme.html
@@ -32,7 +32,7 @@
   <body>
     <div class="element">I have z-index 10k</div>
 
-    <div id="wrapper" data-tf-widget="HLjqXS5W" data-tf-opacity="25"></div>
+    <div id="wrapper" data-bai-widget="HLjqXS5W" data-bai-opacity="25"></div>
     <script src="./lib/embed.js"></script>
 
     <h1>Demonstrate popup with transparent background</h1>
