--- a/packages/demo-html/public/behavioral-html/exit-html.html
+++ b/packages/demo-html/public/behavioral-html/exit-html.html
@@ -23,7 +23,7 @@
     <p>The popup is opened only once (on first detected exit intent).</p>
     <button
       id="popup"
-      class="typeform-share"
+      class="buildai-share"
       data-bai-popup="HLjqXS5W"
       data-bai-medium="unit-test"
       data-bai-open="exit"
