--- a/packages/demo-html/public/behavioral-html/load-html.html
+++ b/packages/demo-html/public/behavioral-html/load-html.html
@@ -11,7 +11,7 @@
 
     <a
       href="#"
-      class="typeform-share button"
+      class="buildai-share button"
       data-bai-slider="HLjqXS5W"
       data-bai-medium="unit-test"
       data-bai-open="load"
