--- a/packages/demo-html/public/behavioral-html/scroll-html.html
+++ b/packages/demo-html/public/behavioral-html/scroll-html.html
@@ -41,7 +41,7 @@
     <p>The popover is opened only once (when you scroll past the given percentage for the first time).</p>
     <button
       id="popover"
-      class="typeform-share"
+      class="buildai-share"
       data-bai-popover="HLjqXS5W"
       data-bai-medium="unit-test"
       data-bai-open="scroll"
