--- a/packages/demo-html/public/behavioral-html/time-html.html
+++ b/packages/demo-html/public/behavioral-html/time-html.html
@@ -9,7 +9,7 @@
     <p>The sidetab is opened automatically after the given time has passed.</p>
     <a
       id="sidetab"
-      class="typeform-share"
+      class="buildai-share"
       data-bai-sidetab="HLjqXS5W"
       data-bai-medium="unit-test"
       data-bai-open="time"
